Added filter by deadline
