# src/main/java/com/example/todolist/controllers/TasksController.java
@@ -3,10 +3,12 @@
 package com.example.todolist.controllers;
 
 
+import com.example.todolist.api.v1.dto.DeadlineDto;
 import com.example.todolist.api.v1.dto.PaginationDto;
 import com.example.todolist.api.v1.dto.TaskRequestDto;
 import com.example.todolist.api.v1.dto.TaskResponseDto;
 import com.example.todolist.api.v1.rest.TasksApi;
+import com.example.todolist.entities.Deadline;
 import com.example.todolist.services.task.TaskServiceImpl;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
@@ -27,6 +29,13 @@ public class TasksController implements TasksApi {
     }
 
     @Override
+    public ResponseEntity<List<TaskResponseDto>> tasksDeadlineDeadlineGet(@PathVariable DeadlineDto deadlineDto) {
+        return ResponseEntity.ok(
+                taskServiceImpl.findByDeadline(deadlineDto)
+        );
+    }
+
+    @Override
     public ResponseEntity<List<TaskResponseDto>> tasksGet(PaginationDto pagination) {
         return ResponseEntity.ok(
                 taskServiceImpl.get(pagination)
@@ -39,13 +48,6 @@ public class TasksController implements TasksApi {
                 taskServiceImpl.findById(id)
         );
     }
-
-//    @Override
-//    public ResponseEntity<List<TaskResponseDto>> tasksDeadlineDeadlineGet(String deadline) {
-//        return ResponseEntity.ok(
-//                taskServiceImpl.
-//        );
-//    }
 
     @Override
     public ResponseEntity<TaskResponseDto> tasksIdPatch(Long id, TaskRequestDto taskRequestDto) {
